[gd_scene load_steps=12 format=1]

[ext_resource path="res://Game/Main/SceneA.gd" type="Script" id=1]
[ext_resource path="res://Resources/UI/Themes/thm_nav.tres" type="Theme" id=2]
[ext_resource path="res://Resources/UI/Themes/thm_dialog.tres" type="Theme" id=3]
[ext_resource path="res://Resources/UI/Styleboxes/tls_bordtile_s1.tres" type="TileSet" id=4]
[ext_resource path="res://Resources/Fonts/Victoriana_36.fnt" type="BitmapFont" id=5]

[sub_resource type="Animation" id=1]

length = 0.5
loop = false
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0, 1 ] }

[sub_resource type="Animation" id=2]

length = 0.25
loop = false
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("topPanel/menu/HBoxContainer:rect/pos")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.25 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( -50, 0 ), Vector2( 50, 0 ) ] }

[sub_resource type="Animation" id=3]

length = 0.25
loop = false
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("topPanel/menu/HBoxContainer:rect/pos")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.25 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 50, 0 ), Vector2( -50, 0 ) ] }

[sub_resource type="Animation" id=4]

length = 0.25
loop = false
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("topPanel:rect/pos")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.25 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 0, -16 ), Vector2( 0, 0 ) ] }

[sub_resource type="Animation" id=5]

length = 0.25
loop = false
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("topPanel:rect/pos")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.25 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 0, 0 ), Vector2( 0, -16 ) ] }

[sub_resource type="Animation" id=6]

length = 0.25
loop = false
step = 0.25

[node name="SceneA" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="anime" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/fadein = SubResource( 1 )
anims/topmenu = SubResource( 2 )
anims/topmenuR = SubResource( 3 )
anims/toppanel = SubResource( 4 )
anims/toppanelR = SubResource( 5 )
anims/transition = SubResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="centerPanel" type="ReferenceFrame" parent="."]

rect/min_size = Vector2( 1024, 768 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 32.0
margin/right = 1024.0
margin/bottom = 800.0

[node name="back" type="TextureFrame" parent="centerPanel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 768.0
modulate = Color( 0.995265, 1, 1, 1 )
stretch_mode = 0

[node name="char" type="Sprite" parent="centerPanel/back"]

transform/pos = Vector2( 1024, 0 )
transform/scale = Vector2( -1, 1 )
centered = false
flip_h = true

[node name="nav" type="PanelContainer" parent="centerPanel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 2 )
margin/left = 32.0
margin/top = 32.0
margin/right = 64.0
margin/bottom = 64.0

[node name="vbox" type="VBoxContainer" parent="centerPanel/nav"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 12.0
margin/top = 12.0
margin/right = 312.0
margin/bottom = 112.0
alignment = 1

[node name="nav0" type="Button" parent="centerPanel/nav/vbox"]

rect/min_size = Vector2( 300, 48 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 300.0
margin/bottom = 48.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Rome"
flat = false
align = 0

[node name="nav1" type="Button" parent="centerPanel/nav/vbox"]

rect/min_size = Vector2( 300, 48 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 52.0
margin/right = 300.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Example button"
flat = false
align = 0

[node name="dialog" type="PanelContainer" parent="centerPanel"]

anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 16.0
margin/top = 208.0
margin/right = 16.0
margin/bottom = 16.0
__meta__ = { "_edit_lock_":true }

[node name="hbox" type="HBoxContainer" parent="centerPanel/dialog"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 12.0
margin/top = 12.0
margin/right = 980.0
margin/bottom = 180.0
alignment = 0

[node name="title" type="Label" parent="centerPanel/dialog/hbox"]

rect/min_size = Vector2( 128, 160 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 128.0
margin/bottom = 168.0
text = "Dialog Title will be here!\n0123456789"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="panel" type="Panel" parent="centerPanel/dialog/hbox"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 132.0
margin/top = 0.0
margin/right = 968.0
margin/bottom = 168.0

[node name="text" type="RichTextLabel" parent="centerPanel/dialog/hbox/panel"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 10.0
margin/right = 10.0
margin/bottom = 10.0
bbcode/enabled = true
bbcode/bbcode = "Bigger texts will come here\n01234567890123456789012345678901234567890123456789012345678901234567890123456789\n[i]Italic text[/i] and [b]bold text[/b] for [b][i]emphasis[/i][/b]\n[indent][code]this is the mono font with indentation[/code][/indent]\nlefties[center]centered[/center][right]rightisies[/right]"
visible_characters = -1

[node name="sidePanel" type="ReferenceFrame" parent="."]

anchor/left = 1
anchor/right = 1
rect/min_size = Vector2( 256, 800 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 256.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 800.0
__meta__ = { "_edit_lock_":true }

[node name="back" type="Sprite" parent="sidePanel"]

transform/pos = Vector2( 16, 16 )
centered = false
__meta__ = { "_edit_lock_":true }

[node name="border" type="TileMap" parent="sidePanel"]

z/z = 1
mode = 0
tile_set = ExtResource( 4 )
cell/size = Vector2( 16, 16 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 0, 2, 1, 3, 3, 3, 5, -1073741824, 6, 3, 8, 3, 10, -1073741824, 11, 3, 13, 3, 15, 2, 196608, 1, 196623, 1, 327680, 0, 327695, 2, 393216, 1, 524288, 0, 524303, 2, 589824, 1, 720896, 1, 720911, 1, 851968, 0, 851983, 2, 917504, 1, 1048576, 1, 1048591, 1, 1179648, 2, 1179663, 2, 1376256, 1, 1376271, 1, 1507328, 2, 1507343, 2, 1703936, 2, 1703951, 2, 1900544, 1, 1900559, 1, 2031616, 0, 2031631, 2, 2097152, 1, 2228224, 1, 2228239, 1, 2359296, 0, 2359311, 2, 2424832, 1, 2555904, 1, 2555919, 1, 2686976, 0, 2686991, 2, 2752512, 1, 2883584, 0, 2883599, 2, 2949120, 1, 3080192, 1, 3080207, 1, 3211264, 0, 3211265, 1073741827, 3211267, 1073741827, 3211269, -1610612736, 3211270, 1073741827, 3211272, 1073741827, 3211274, -1610612736, 3211275, 1073741827, 3211277, 1073741827, 3211279, 0 )
__meta__ = { "_edit_lock_":true }

[node name="topPanel" type="ReferenceFrame" parent="."]

rect/min_size = Vector2( 1024, 32 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -16.0
margin/right = 1024.0
margin/bottom = 32.0
__meta__ = { "_edit_lock_":true }

[node name="back" type="Sprite" parent="topPanel"]

centered = false
__meta__ = { "_edit_lock_":true }

[node name="border" type="TileMap" parent="topPanel"]

z/z = 1
mode = 0
tile_set = ExtResource( 4 )
cell/size = Vector2( 16, 16 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 131072, 4, 131075, 3, 131077, 4, 131080, 3, 131082, 4, 131085, 3, 131087, 4, 131090, 3, 131092, 4, 131095, 3, 131097, 4, 131100, 3, 131102, 4, 131105, 4, 131108, 3, 131110, 4, 131113, 3, 131115, 4, 131118, 3, 131120, 4, 131123, 3, 131125, 4, 131128, 3, 131130, 4, 131133, 3, 131135, -1073741824 )
__meta__ = { "_edit_lock_":true }

[node name="title" type="Label" parent="topPanel"]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 200.0
margin/top = -2.0
margin/right = -200.0
margin/bottom = 0.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 0
custom_constants/shadow_as_outline = 1
text = "Title be here\nanother line\n"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = 1
__meta__ = { "_edit_lock_":true }

[node name="menu" type="Button" parent="topPanel"]

rect/min_size = Vector2( 50, 32 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 50.0
margin/bottom = 32.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Menu"
flat = false
__meta__ = { "_edit_lock_":true }

[node name="HBoxContainer" type="HBoxContainer" parent="topPanel/menu"]

rect/min_size = Vector2( 50, 32 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -50.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 32.0
alignment = 0

[node name="quit" type="Button" parent="topPanel/menu/HBoxContainer"]

rect/min_size = Vector2( 50, 32 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 50.0
margin/bottom = 32.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit"
flat = false


